--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Wodan Ling and Michael C. Wu
 Maintainer: Wodan Ling <wling@fredhutch.org>
 Description: This package conducts univariate association test between microbiome data (un-normalized or normalized by any method) and clinical variables (dicrete or quantitative),
     supporting both unadjusted and adjusted tests.
-License: GPL (>=2)
+License: GPL-3.0
 Encoding: UTF-8
 LazyData: true
 NeedsCompilation: no
